--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./scopes.js"></script>
+    <script src="./hoisting.js"></script>
     <title>Document</title>
 </head>
 <body>
