--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./scopes.js"></script>
     <script src="./hoisting.js"></script>
+    <script src="./classes.js"></script>
     <title>Document</title>
 </head>
 <body>
