added js basics closures

--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -6,6 +6,7 @@
     <script src="./scopes.js"></script>
     <script src="./hoisting.js"></script>
     <script src="./classes.js"></script>
+    <script src="./closures.js"></script>
     <title>Document</title>
 </head>
 <body>
