--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -7,6 +7,7 @@
     <script src="./hoisting.js"></script>
     <script src="./classes.js"></script>
     <script src="./closures.js"></script>
+    <script src="./this.js"></script>
     <title>Document</title>
 </head>
 <body>
