added js basics proto

--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -8,6 +8,7 @@
     <script src="./classes.js"></script>
     <script src="./closures.js"></script>
     <script src="./this.js"></script>
+    <script src="./proto.js"></script>
     <title>Document</title>
 </head>
 <body>
