added js basics proto2

--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -9,6 +9,7 @@
     <script src="./closures.js"></script>
     <script src="./this.js"></script>
     <script src="./proto.js"></script>
+    <script src="./proto2.js"></script>
     <title>Document</title>
 </head>
 <body>
