added js basics classes & inheritance

--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -10,6 +10,7 @@
     <script src="./this.js"></script>
     <script src="./proto.js"></script>
     <script src="./proto2.js"></script>
+    <script src="./classes_adv.js"></script>
     <title>Document</title>
 </head>
 <body>
