added js basics proises

--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -11,6 +11,7 @@
     <script src="./proto.js"></script>
     <script src="./proto2.js"></script>
     <script src="./classes_adv.js"></script>
+    <script src="./promises.js"></script>
     <title>Document</title>
 </head>
 <body>
